--- a/Ep_6/foodApp/package.json
+++ b/Ep_6/foodApp/package.json
@@ -12,9 +12,12 @@
   "dependencies": {
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
+    "cors-anywhere": "^0.4.4",
+    "force": "^0.0.3",
     "headlessui": "^0.0.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.20.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
