--- a/Ep_6/foodApp/package.json
+++ b/Ep_6/foodApp/package.json
@@ -12,11 +12,13 @@
   "dependencies": {
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
+    "@react-icons/all-files": "^4.1.0",
     "cors-anywhere": "^0.4.4",
     "force": "^0.0.3",
     "headlessui": "^0.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icon": "^1.0.0",
     "react-router-dom": "^6.20.1"
   },
   "devDependencies": {
